tests/lean/no_coe.lean.expected.out
ite ↥tt 1 0 : ℕ
no_coe.lean:5:7: error: type mismatch at application
  ite tt
term
  tt
has type
  bool
but is expected to have type
  Prop
