tests/lean/no_coe.lean
#check if tt then 1 else 0

set_option elaborator.coercions false

#check if tt then 1 else 0 -- Error coercions are disabled
